--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "nodemon --inspect src/index.js",
     "watch": "sass --watch src/resources/scss/app.scss src/public/css/app.css",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepare": "husky"
@@ -31,7 +31,9 @@
   "dependencies": {
     "express": "^4.21.0",
     "express-handlebars": "^8.0.1",
-    "mongoose": "^8.6.3"
+    "method-override": "^3.0.0",
+    "mongoose": "^8.6.3",
+    "mongoose-slug-updater": "^3.3.0"
   },
   "devDependencies": {
     "husky": "^9.1.6",
